@@ -103,8 +103,9 @@ Changes in current version:
  o Fix use of freed memory in event_reinit; pointed out by Peter Postma
  o constify struct timeval * where possible
  o make event_get_supported_methods obey environment variables
+ o support for edge-triggered events on epoll and kqueue backends: patch from Valery Kholodkov
 
-        
+
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
  o demote most http warnings to debug messages
